<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LandingPage"
    android:orientation="vertical">


        <ImageView
            android:id="@+id/background_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/landingbackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="298dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_shape"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="3dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginEmail" />

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="299dp"
            android:layout_height="41dp"
            android:layout_marginTop="140dp"
            android:background="@drawable/edit_text_shape"
            android:drawableLeft="@drawable/baseline_email_24"
            android:drawablePadding="3dp"
            android:ems="10"
            android:hint="@string/email_address"
            android:inputType="textPersonName"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/background_image_view" />

        <Button
            android:id="@+id/button"
            android:layout_width="293dp"
            android:layout_height="36dp"
            android:layout_marginTop="48dp"
            android:background="@color/white"
            android:onClick="loginSignIn"
            android:text="@string/sign_in"
            app:cornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="@+id/loginPassword"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="@+id/loginPassword"
            app:layout_constraintTop_toBottomOf="@+id/loginPassword" />

        <Button
            android:id="@+id/button2"
            android:layout_width="293dp"
            android:layout_height="36dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:onClick="createAccount"
            android:text="Create Account"
            app:cornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="@+id/button"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="forgotPassword"
            android:text="Forgot Password?"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/loginPassword"
            app:layout_constraintTop_toBottomOf="@+id/loginPassword" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:text="or Create an Account?"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>