<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.HomeFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/rescuebackground"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="9dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="8dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="6dp">

            <TextView
                android:id="@+id/informationMain"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="Breakdown Assistance"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="6dp"
        app:cardCornerRadius="9dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="8dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/cardViewTop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="6dp">


            <TextView
                android:id="@+id/rescueFBVehicleUserLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:paddingStart="10dp"
                android:text="Hello,"
                android:textStyle="italic"/>
            <TextView
                android:id="@+id/rescueFBVehicleUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:text=""
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/currentRescueRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:paddingStart="10dp"
                android:text="" />



            <TextView
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:lineSpacingExtra="1dp"
                android:paddingEnd="5dp"
                android:background="@color/medium_grey">

            </TextView>
            <TextView
                android:id="@+id/addARescueRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#008505"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:text="@string/do_you_want_to_create_a_road_assistance_request" />

            <TextView
                android:id="@+id/updateRescueRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#3F51B5"
                android:paddingStart="10dp"
                android:paddingTop="1dp"
                android:text="@string/do_you_want_to_update_your_road_assistance_request" />

            <TextView
                android:id="@+id/deleteRescueRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:textColor="#F30000"
                android:textStyle="bold"
                android:text="@string/do_you_want_to_delete_your_road_assistance_request" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
